modifique la tipofrafia,modifique parte resposive y deje todo funcionando bien

--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,15 @@
     width: 50px;
 }
 header {
-    font-family: "Roboto";
-    background: #001514ff;
+    font-family: 'roboto' sans-serif;
+    background: black;
+}
+@media all and (max-width: 768px) {
+    .casa {
+        display: none;
+    }
+}
+.lista {
+    border: solid 5px;
 }
 
