--- a/styles/login.css
+++ b/styles/login.css
@@ -1,69 +1,77 @@
 /* Tipografía general (Ubutu) */
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');;
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+;
 
 /* Tipografía nav (Roboto)*/
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');; 
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+;
 
-:root{
-    --rich-black: #001514ff;
-    --licorice: #1b1110ff;
-    --black-bean: #290f0eff;
-    --black-bean-2: #360d0cff;
-    --black-bean-3: #440b0aff;
-    --black-bean-4: #4b0a09ff;
-    --rosewood: #510908ff;
-    --rosewood-2: #5e0706ff;
-    --blood-red: #650605ff;
-    --blood-red-2: #6b0504ff;
+:root {
+  --rich-black: #001514ff;
+  --licorice: #1b1110ff;
+  --black-bean: #290f0eff;
+  --black-bean-2: #360d0cff;
+  --black-bean-3: #440b0aff;
+  --black-bean-4: #4b0a09ff;
+  --rosewood: #510908ff;
+  --rosewood-2: #5e0706ff;
+  --blood-red: #650605ff;
+  --blood-red-2: #6b0504ff;
 }
- body {
-      background-color: #001514ff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
 
-    .login-form {
-      background-color: #1b1110ff;
-      padding: 2rem;
-      border-radius: 12px;
-    --black-bean: #290f0eff;
-      box-shadow: 0 0 15px ;
-      width: 320px;
-    }
+body {
+  background: linear-gradient(to bottom, #440b0aff 0%, #1b1110ff 50%, black 100%);
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
 
-    .login-form h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #360d0cff;
-    }
+.login-form {
+  background-color: rgb(25, 25, 25);
+  background-repeat: no-repeat;
+  padding: 2rem;
+  border-radius: 12px;
+  box-shadow: 0 0 15px;
+  width: 320px;
+}
 
-    
-    .login-form input[type="text"],
-    .login-form input[type="password"] {
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-    --black-bean-3: #440b0aff;
-      border: 1px solid ;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
+.text {
+  color: white;
+}
 
-    .login-form button {
-      width: 100%;
-      padding: 0.75rem;
-      background-color: #4b0a09ff;
-      color: rgb(251, 248, 248);
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-top: 1rem;
-    }
+.login-form h2 {
+  text-align: center;
+  margin-bottom: 1.5rem;
 
-    .login-form button:hover {
-      background-color: #510908ff;
-    }
+}
+
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+  width: 100%;
+  padding: 0.75rem;
+  margin: 0.5rem 0;
+
+  border: 1px solid;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+
+.login-form button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #4b0a09ff;
+  color: rgb(251, 248, 248);
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.login-form button:hover {
+  background-color: #510908ff;
+}
