--- a/styles/login.css
+++ b/styles/login.css
@@ -33,9 +33,9 @@ body {
   background-color: rgb(25, 25, 25);
   background-repeat: no-repeat;
   padding: 2rem;
-  border-radius: 12px;
-  box-shadow: 0 0 15px;
-  width: 320px;
+  border-radius: 40px;
+  box-shadow: 0 0 38px;
+  width: 570px;
 }
 
 .text {
@@ -74,4 +74,8 @@ body {
 
 .login-form button:hover {
   background-color: #510908ff;
+}
+
+.icono{
+  padding-left: 10px;
 }
