--- a/styles/index.css
+++ b/styles/index.css
@@ -113,6 +113,74 @@ h2 {
   gap: 1.5rem;
   padding: 1rem;
   padding-top: 1px;
+  margin-left: 1rem;
+}
+
+.categorias{
+  display: flex;
+  justify-content: center;
+}
+
+.categoria-titulo {
+  text-align: center;
+}
+
+.categoria {
+  cursor: pointer;
+  width: 190px;
+  height: 264px;
+  background: #551715;
+  font-family: inherit;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(101, 6, 5, 0.6);
+}
+
+.icono-categoria {
+  color: #552524b7;
+  padding-left: 30px;
+  position: relative;
+}
+
+.nombre-categoria {
+  text-transform: uppercase;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.801);
+  padding: 35px;
+  line-height: 23px;
+}
+
+.texto-categoria {
+  font-size: 20px;
+  font-weight: 900;
+  padding: 60px 33px 0;
+  color: rgba(0, 0, 0, 0.781);
+  position: absolute;
+  top: 40px;
+  left: 1px;
+  line-height: 23px;
+}
+
+.author {
+  margin-top: 5px;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.categoria:hover .author {
+  opacity: 1;
+}
+
+.author-container {
+  display: flex;
+  align-items: center;
+}
+
+.author {
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.555);
+  padding-left: 15%;
+  padding-top: 18%;
 }
 
 .cancion {
@@ -165,6 +233,10 @@ h2 {
   border: none;
 }
 
+.modal-imagen{
+  border-radius: 10px;
+}
+
 .modal-header .modal-title {
   color: #fff;
 }
@@ -180,6 +252,7 @@ h2 {
 
 .btn-primary:hover {
   background-color: #5c1b1a;
+  border-color: #5c1b1a;
 }
 
 .btn-secondary {
