--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -2,3 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
+
+.pagination .page-link {
+  background-color: transparent;
+}
