--- a/styles/login.css
+++ b/styles/login.css
@@ -37,14 +37,14 @@ body {
   color: rgba(243, 244, 246);
 }
 
-h1{
+main h1{
   text-align: center;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
 }
 
-form {
+main form {
   margin-top: 1.5rem;
 }
 
