--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -63,14 +63,47 @@ header {
   width: 60px;
 }
 
-.cartas {
-    width: 20px;
-    height: 20px;
+
+.card {
+  width: 17em;
+  height: 22.5em;
+  background: #171717;
+  transition: 1s ease-in-out;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 2px solid white;
+  box-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px white;
 }
 
-.avatar-perfil {
-    width: 100px;
+.card-nombre {
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  display: block;
+  font-size: 1em;
 }
+
+.card .info {
+  font-weight: 400;
+  color: white;
+  display: block;
+  text-align: center;
+  font-size: 0.72em;
+  margin: 1em;
+}
+
+
+.imagen-avatar-alvaro {
+  width: 100px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  object-fit: cover;
+}
+
 
 .imagen-footer {
   width: 70%;
