Se agregó la sidebar

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,20 +23,120 @@ body {
   color: rgb(235, 235, 235);
   font-family: 'Ubuntu', sans-serif;
   background: linear-gradient(to bottom, #440b0aff 0%, #1b1110ff 50%, #121212 100%);
+  height: 100%;
 }
 
 header {
   font-family: 'roboto' sans-serif;
 }
 
-.nav-borroso{
+.nav-borroso {
   background-color: rgba(0, 0, 0, 0.13);
   backdrop-filter: blur(3px);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.034); 
+  border-bottom: 1px solid rgba(255, 255, 255, 0.034);
 }
 
-main{
-  padding-top: 5rem;
+.layout {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  padding-top: 5.5rem;
+}
+
+.sidebar {
+  overflow-y: auto;
+  width: 19%;
+  color: white;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.13);
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar li {
+  margin: 1rem;
+}
+
+.sidebar a {
+  color: #b3b3b3;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+}
+
+.sidebar a:hover {
+  color: white;
+}
+
+.playlist h4,
+.playlist-texto{
+  color: rgb(235, 235, 235);
+  font-size: 13px;
+}
+
+.playlist {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.308);
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.playlist-boton {
+  background-color: rgb(235, 235, 235);
+  color: #121212;
+  border: none;
+  padding: 5px 15px;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.playlist-boton:hover {
+  background-color: rgb(202, 202, 202);
+  transform: scale(1.05);
+  transition: transform 0.2s ease;
+}
+
+.contenido-main {
+  flex: 1;
+  color: white;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.contenido-main::-webkit-scrollbar,
+.sidebar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.contenido-main::-webkit-scrollbar-track,
+.sidebar::-webkit-scrollbar-track {
+  background: #121212;
+}
+
+.contenido-main::-webkit-scrollbar-thumb,
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: #440b0a;
+  border-radius: 10px;
+}
+
+.contenido-main::-webkit-scrollbar-thumb:hover,
+.sidebar::-webkit-scrollbar-thumb:hover {
+  background-color: #440b0a;
+}
+
+.contenido-main,
+.sidebar {
+  scrollbar-color: #440b0a #121212;
+  scrollbar-width: thin;
 }
 
 @keyframes animacion-boton {
@@ -119,7 +219,7 @@ h2 {
   margin-left: 1rem;
 }
 
-.categorias{
+.categorias {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
 }
@@ -206,15 +306,15 @@ h2 {
   margin-bottom: 1rem;
 }
 
-.img-cancion{
+.img-cancion {
   border-radius: 8px;
 }
 
-.img-artista{
+.img-artista {
   border-radius: 100%;
 }
 
-.artistas{
+.artistas {
   border-radius: 50%;
 }
 
@@ -225,8 +325,10 @@ h2 {
 
 
 .modal-content {
-  background-color: #1b1110; /* Fondo oscuro */
-  color: #fff; /* Texto blanco */
+  background-color: #1b1110;
+  /* Fondo oscuro */
+  color: #fff;
+  /* Texto blanco */
   border: none;
 }
 
@@ -235,7 +337,7 @@ h2 {
   border: none;
 }
 
-.modal-imagen{
+.modal-imagen {
   border-radius: 10px;
 }
 
@@ -280,7 +382,8 @@ h2 {
   transform: translateY(20px);
   opacity: 0;
   transition: all 0.4s ease;
-  pointer-events: none; /* Evita que bloquee clicks */
+  pointer-events: none;
+  /* Evita que bloquee clicks */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -311,21 +414,21 @@ h2 {
   width: 60px;
 }
 
-@media all and (max-width: 576px){
+@media all and (max-width: 576px) {
 
-  h2{
+  h2 {
     padding: 0;
     margin: 0;
     padding-bottom: 1rem;
     text-align: center;
   }
 
-  .author{
+  .author {
     opacity: 1;
     width: 90%;
   }
 
-  .canciones{
+  .canciones {
     padding: 0;
     margin: 0;
   }
@@ -342,7 +445,7 @@ h2 {
 
 @media all and (min-width: 577px) and (max-width: 768px) {
 
-  .categorias{
+  .categorias {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
 
@@ -356,9 +459,9 @@ h2 {
 
 }
 
-@media all and (min-width: 769px) and (max-width: 992px){
+@media all and (min-width: 769px) and (max-width: 992px) {
 
-  .categorias{
+  .categorias {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
 
