--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@ body {
   height: 100%;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -80,7 +80,7 @@ header {
 }
 
 .playlist h4,
-.playlist-texto{
+.playlist-texto {
   color: rgb(235, 235, 235);
   font-size: 13px;
 }
@@ -118,23 +118,27 @@ header {
 }
 
 .contenido-main::-webkit-scrollbar,
-.sidebar::-webkit-scrollbar {
+.sidebar::-webkit-scrollbar,
+body::-webkit-scrollbar {
   width: 8px;
 }
 
 .contenido-main::-webkit-scrollbar-track,
-.sidebar::-webkit-scrollbar-track {
+.sidebar::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
   background: #121212;
 }
 
 .contenido-main::-webkit-scrollbar-thumb,
-.sidebar::-webkit-scrollbar-thumb {
+.sidebar::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
   background-color: #440b0a;
   border-radius: 10px;
 }
 
 .contenido-main::-webkit-scrollbar-thumb:hover,
-.sidebar::-webkit-scrollbar-thumb:hover {
+.sidebar::-webkit-scrollbar-thumb:hover,
+body::-webkit-scrollbar-thumb:hover {
   background-color: #440b0a;
 }
 
@@ -202,6 +206,24 @@ h2 {
     0 0 40px rgb(202, 202, 202);
   font-weight: bold;
   margin: 20px 0;
+}
+
+.titulo-canciones {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mostrar-mas {
+  font-size: 14px;
+  color: #b3b3b3;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.mostrar-mas:hover {
+  color: white;
+  border-bottom: 1px solid white;
 }
 
 .carousel {
@@ -445,33 +467,53 @@ h2 {
     margin: 0;
     padding-bottom: 1rem;
     text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
-  span, .playlist{
+  span,
+  .playlist {
     display: none;
   }
 
-  .iconos-sidebar ul{
+  .mostrar-mas {
+    display: none;
+  }
+
+  .bottom-sidebar ul {
     display: flex;
     justify-content: space-around;
   }
 
-  i{
+  i {
     font-size: 20px;
-    padding-right: 1px;
   }
 
-  .layout{
+  .layout {
     flex-direction: column;
   }
 
-  .sidebar {
-    order: 2;
-    width: 100%;
+  .bottom-sidebar {
     padding: 0;
     margin: 0;
+    padding-top: 10px;
+  }
+
+  .bottom-sidebar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 85px;
+    background-color: #111;
     border-top: 1px solid rgba(255, 255, 255, 0.034);
-    padding-top: 0rem;
+    align-items: center;
+    color: white;
+    z-index: 1000;
+  }
+
+  .sidebar{
+    overflow-y: hidden !important;
   }
 
   .author {
@@ -508,7 +550,7 @@ h2 {
   list-style-type: none;
 }
 
-.puntos-lista a:hover{
+.puntos-lista a:hover {
   color: white;
 }
 
@@ -530,31 +572,40 @@ h2 {
   .lupa-busqueda {
     display: none;
   }
-  span, .playlist{
+
+  span,
+  .playlist {
     display: none;
   }
 
-  .iconos-sidebar ul{
+  .bottom-sidebar ul {
     display: flex;
     justify-content: space-around;
   }
 
-  i{
+  i {
     font-size: 20px;
-    padding-right: 1px;
   }
 
-  .layout{
+  .layout {
     flex-direction: column;
   }
 
-  .sidebar {
-    order: 2;
+  .bottom-sidebar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    padding: 0;
-    margin: 0;
+    height: 85px;
+    background-color: #111;
     border-top: 1px solid rgba(255, 255, 255, 0.034);
-    padding-top: 0rem;
+    align-items: center;
+    color: white;
+    z-index: 1000;
+  }
+  
+  .sidebar{
+    overflow-y: hidden !important;
   }
 }
 
@@ -572,7 +623,7 @@ h2 {
     display: none;
   }
 
-  .sidebar{
+  .sidebar {
     width: 21%;
   }
 
