--- a/styles/suscripcion.css
+++ b/styles/suscripcion.css
@@ -56,6 +56,12 @@ h2{
      width: 270px;
      text-align: center;
      color: #f9f6f6;
+     transition: transform 0.2s ease;
+ }
+
+ .card:hover{
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
  }
 
  .card h2 {
@@ -93,6 +99,10 @@ h2{
  .faq h3 {
      color: #ffffff;
  }
+
+b, .text-center{
+    color: white;
+}
 
  .faq-list {
      list-style-type: none;
