--- a/styles/index.css
+++ b/styles/index.css
@@ -1,630 +1,18 @@
 /* Tipografía general (Ubutu) */
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-;
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');;
 
 /* Tipografía nav (Roboto)*/
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-;
-
-:root {
-  --rich-black: #121212;
-  --black-bean: #290f0e;
-  --black-bean-2: #360d0c;
-  --black-bean-3: #440b0a;
-  --black-bean-4: #4b0a09;
-  --rosewood: #510908;
-  --rosewood-2: #5e0706;
-  --blood-red: #650605;
-  --blood-red-2: #6b0504;
-}
-
-body {
-  margin: 0;
-  color: rgb(235, 235, 235);
-  font-family: 'Ubuntu', sans-serif;
-  background: linear-gradient(to bottom, #440b0aff 0%, #1b1110ff 50%, #121212 100%);
-  height: 100%;
-}
-
-a {
-  text-decoration: none;
-}
-
-header {
-  font-family: 'roboto' sans-serif;
-}
-
-.nav-borroso {
-  background-color: rgba(0, 0, 0, 0.13);
-  backdrop-filter: blur(3px);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.034);
-}
-
-.layout {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  padding-top: 5.5rem;
-}
-
-.sidebar {
-  overflow-y: auto;
-  width: 19%;
-  color: white;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.13);
-  border-right: 1px solid rgba(255, 255, 255, 0.048);
-}
-
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar li {
-  margin: 1rem;
-}
-
-.sidebar a {
-  color: #b3b3b3;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 14px;
-}
-
-.sidebar a:hover {
-  color: white;
-}
-
-.playlist h4,
-.playlist-texto {
-  color: rgb(235, 235, 235);
-  font-size: 13px;
-}
-
-.playlist {
-  width: 100%;
-  background-color: rgba(71, 71, 71, 0.089);
-  padding: 10px;
-  border-radius: 20px;
-}
-
-.playlist-boton {
-  background-color: rgb(235, 235, 235);
-  color: #121212;
-  border: none;
-  padding: 5px 15px;
-  font-weight: 600;
-  font-size: 14px;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-.playlist-boton:hover {
-  background-color: rgb(202, 202, 202);
-  transform: scale(1.05);
-  transition: transform 0.2s ease;
-}
-
-.contenido-main {
-  flex: 1;
-  color: white;
-  padding: 20px;
-  overflow-y: auto;
-}
-
-.contenido-main::-webkit-scrollbar,
-.sidebar::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  width: 8px;
-}
-
-.contenido-main::-webkit-scrollbar-track,
-.sidebar::-webkit-scrollbar-track,
-body::-webkit-scrollbar-track {
-  background: #121212;
-}
-
-.contenido-main::-webkit-scrollbar-thumb,
-.sidebar::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb {
-  background-color: #440b0a;
-  border-radius: 10px;
-}
-
-.contenido-main::-webkit-scrollbar-thumb:hover,
-.sidebar::-webkit-scrollbar-thumb:hover,
-body::-webkit-scrollbar-thumb:hover {
-  background-color: #440b0a;
-}
-
-.contenido-main,
-.sidebar {
-  scrollbar-color: #440b0a #12121200;
-  scrollbar-width: thin;
-}
-
-@keyframes animacion-boton {
-  0% {
-    transform: translateY(0);
-  }
-
-  50% {
-    transform: translateY(-5px);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-.imagen-loogo:hover {
-  animation: animacion-boton 0.5s ease infinite;
-}
-
-.efectos {
-  border: 1px solid transparent;
-  padding: 5px;
-  padding-bottom: 0;
-  color: rgb(235, 235, 235);
-}
-
-.efectos:hover {
-  border-bottom: 1px solid rgb(235, 235, 235);
-  color: rgb(235, 235, 235);
-}
-
-
-.logo {
-  display: flex;
-}
-
-.logo img {
-  width: 100%;
-  object-fit: contain;
-
-}
-
-.contenido {
-  flex: 1;
-  padding: 2rem;
-  padding-top: 0.2rem;
-  overflow-y: auto;
-}
-
-h2 {
-  padding-left: 2rem;
-  font-size: 20px;
-  text-shadow:
-    0 0 5px rgb(202, 202, 202),
-    0 0 10px rgb(202, 202, 202),
-    0 0 20px rgb(202, 202, 202),
-    0 0 40px rgb(202, 202, 202);
-  font-weight: bold;
-  margin: 20px 0;
-}
-
-.titulo-canciones {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.mostrar-mas {
-  font-size: 14px;
-  color: #b3b3b3;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-.mostrar-mas:hover {
-  color: white;
-  border-bottom: 1px solid white;
-}
-
-.carousel {
-  border-radius: 8px;
-  overflow: hidden;
-  margin: 20px auto;
-  max-width: 900px;
-}
-
-.carousel-item {
-  transition: transform 0.5s ease-in-out;
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.canciones {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 1.5rem;
-  padding: 1rem;
-  padding-top: 1px;
-  margin-left: 1rem;
-}
-
-.categorias {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
-}
-
-.categoria-titulo {
-  text-align: center;
-  color: #ffffff;
-  font-size: 28px;
-  text-shadow:
-    0 0 5px rgb(202, 202, 202),
-    0 0 10px rgb(202, 202, 202),
-    0 0 20px rgb(202, 202, 202),
-    0 0 40px rgb(202, 202, 202);
-  font-weight: bold;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.categoria {
-  cursor: pointer;
-  height: 264px;
-  background: #551715;
-  font-family: inherit;
-  position: relative;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(101, 6, 5, 0.6);
-}
-
-.icono-categoria {
-  color: #552524b7;
-  padding-left: 30px;
-  position: relative;
-}
-
-.nombre-categoria {
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #000;
-  text-shadow:
-    0 0 5px #444,
-    0 0 10px #333,
-    0 0 15px #222;
-  font-weight: bold;
-  padding: 35px;
-  line-height: 23px;
-}
-
-.texto-categoria {
-  font-size: 20px;
-  font-weight: 900;
-  padding: 60px 33px 0;
-  color: rgba(0, 0, 0, 0.781);
-  position: absolute;
-  top: 40px;
-  left: 1px;
-  line-height: 23px;
-}
-
-.author {
-  margin-top: 5px;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.categoria:hover .author {
-  opacity: 1;
-}
-
-.author-container {
-  display: flex;
-  align-items: center;
-}
-
-.author {
-  font-weight: 700;
-  color: rgba(0, 0, 0, 0.555);
-  padding-left: 15%;
-  padding-top: 18%;
-}
-
-.cancion {
-  border-radius: 12px;
-  padding: 1rem;
-  color: #fff;
-  transition: background-color 0.3s ease;
-  cursor: pointer;
-}
-
-.cancion h3 {
-  font-size: 10px;
-}
-
-.cancion:hover {
-  background-color: #290f0e;
-}
-
-.cover img {
-  width: 100%;
-  margin-bottom: 1rem;
-}
-
-.img-cancion {
-  border-radius: 8px;
-}
-
-.img-artista {
-  border-radius: 100%;
-}
-
-.artistas {
-  border-radius: 50%;
-}
-
-.cover {
-  position: relative;
-  overflow: hidden;
-}
-
-
-.modal-content {
-  background-color: #1b1110;
-  color: #fff;
-  border: none;
-}
-
-.modal-header,
-.modal-footer {
-  border: none;
-}
-
-.modal-imagen {
-  border-radius: 10px;
-}
-
-.modal-header .modal-title {
-  color: #fff;
-}
-
-.modal-body p {
-  color: #e0e0e0;
-}
-
-.btn-primary {
-  background-color: #440b0a;
-  border-color: #440b0a;
-}
-
-.btn-primary:hover {
-  background-color: #5c1b1a;
-  border-color: #5c1b1a;
-}
-
-.btn-secondary {
-  background-color: #333;
-  border-color: #333;
-}
-
-.btn-secondary:hover {
-  background-color: #444;
-}
-
-.play-icon {
-  position: absolute;
-  bottom: 30px;
-  right: 10px;
-  width: 50px;
-  height: 50px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: translateY(20px);
-  opacity: 0;
-  transition: all 0.4s ease;
-  pointer-events: none;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.play-icon::before {
-  content: '▶';
-  font-size: 22px;
-  color: #000;
-}
-
-.cover:hover .play-icon {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-
-.info h3 {
-  font-size: 1rem;
-  margin: 0;
-}
-
-.info p {
-  font-size: 0.875rem;
-  color: #b3b3b3;
-  margin: 0.3rem 0 0;
-}
-
-.imagen-loogo {
-  width: 60px;
-}
-
-@media all and (max-width: 576px) {
-
-  h2 {
-    padding: 0;
-    margin: 0;
-    padding-bottom: 1rem;
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  span,
-  .playlist {
-    display: none;
-  }
-
-  .mostrar-mas {
-    display: none;
-  }
-
-  .bottom-sidebar ul {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  i {
-    font-size: 20px;
-  }
-
-  .layout {
-    flex-direction: column;
-  }
-
-  .bottom-sidebar {
-    padding: 0;
-    margin: 0;
-    padding-top: 10px;
-  }
-
-  .bottom-sidebar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 85px;
-    background-color: #111;
-    border-top: 1px solid rgba(255, 255, 255, 0.034);
-    align-items: center;
-    color: white;
-    z-index: 1000;
-  }
-
-  .sidebar{
-    overflow-y: hidden !important;
-  }
-
-  .author {
-    width: 90%;
-  }
-
-  .canciones {
-    padding: 0;
-    margin: 0;
-  }
-
-  .barra-busqueda {
-    display: none;
-  }
-
-  .lupa-busqueda {
-    display: none;
-  }
-
-  .imagen-footer {
-    display: none;
-  }
-
-  .primer-grid {
-    display: none;
-  }
-}
-
-.imagen-footer {
-  width: 70%;
-}
-
-.puntos-lista {
-  list-style-type: none;
-}
-
-.puntos-lista a:hover {
-  color: white;
-}
-
-.links-footer {
-  text-decoration: none;
-  color: #f1e6e6bb;
-}
-
-@media all and (min-width: 577px) and (max-width: 768px) {
-
-  .categorias {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  }
-
-  .barra-busqueda {
-    display: none;
-  }
-
-  .lupa-busqueda {
-    display: none;
-  }
-
-  span,
-  .playlist {
-    display: none;
-  }
-
-  .bottom-sidebar ul {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  i {
-    font-size: 20px;
-  }
-
-  .layout {
-    flex-direction: column;
-  }
-
-  .bottom-sidebar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 85px;
-    background-color: #111;
-    border-top: 1px solid rgba(255, 255, 255, 0.034);
-    align-items: center;
-    color: white;
-    z-index: 1000;
-  }
-  
-  .sidebar{
-    overflow-y: hidden !important;
-  }
-}
-
-@media all and (min-width: 769px) and (max-width: 992px) {
-
-  .categorias {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  }
-
-  .barra-busqueda {
-    display: none;
-  }
-
-  .lupa-busqueda {
-    display: none;
-  }
-
-  .sidebar {
-    width: 21%;
-  }
-
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');; 
+
+:root{
+    --rich-black: #001514ff;
+    --licorice: #1b1110ff;
+    --black-bean: #290f0eff;
+    --black-bean-2: #360d0cff;
+    --black-bean-3: #440b0aff;
+    --black-bean-4: #4b0a09ff;
+    --rosewood: #510908ff;
+    --rosewood-2: #5e0706ff;
+    --blood-red: #650605ff;
+    --blood-red-2: #6b0504ff;
 }
