--- a/styles/login.css
+++ b/styles/login.css
@@ -1,137 +1,18 @@
 /* Tipografía general (Ubutu) */
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-;
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');;
 
 /* Tipografía nav (Roboto)*/
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-;
+@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');; 
 
-:root {
-  --rich-black: #001514ff;
-  --licorice: #1b1110ff;
-  --black-bean: #290f0eff;
-  --black-bean-2: #360d0cff;
-  --black-bean-3: #440b0aff;
-  --black-bean-4: #4b0a09ff;
-  --rosewood: #510908ff;
-  --rosewood-2: #5e0706ff;
-  --blood-red: #650605ff;
-  --blood-red-2: #6b0504ff;
-}
-
-body {
-  background: green;
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.form-contenedor {
-  width: 320px;
-  border-radius: 0.7rem;
-  background-color: rgb(25, 25, 25);
-  padding: 2rem;
-  color: rgba(243, 244, 246);
-}
-
-main h1{
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
-}
-
-main form {
-  margin-top: 1.5rem;
-}
-
-.formulario-input{
-  margin-top: 0.2rem;
-  font-size: 0.8rem;
-  line-height: 1.2rem;
-}
-
-.formulario-input label {
-  display: block;
-  color: rgba(156, 163, 175);
-  margin-bottom: 4px;
-}
-
-.formulario-input input {
-  width: 100%;
-  border-radius: 0.3rem;
-  border: 1px solid rgba(55, 65, 81);
-  outline: 0;
-  background-color: rgb(25, 25, 25);
-  padding: 0.7rem 1rem;
-  color: rgba(243, 244, 246);
-}
-
-.formulario-input input:focus {
-  border-color: #510908ff;
-}
-
-.contraseña-olvidada {
-  display: flex;
-  justify-content: flex-end;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  color: rgba(156, 163, 175,1);
-  margin: 8px 0 14px 0;
-}
-
-.contraseña-olvidada a,.signup a {
-  color: rgba(243, 244, 246, 1);
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.contraseña-olvidada a:hover, .signup a:hover {
-  text-decoration: underline rgba(81, 9, 8, 0.425);
-}
-
-.logearse {
-  display: block;
-  width: 100%;
-  background-color: rgba(81, 9, 8, 0.425);
-  padding: 0.7rem;
-  text-align: center;
-  color: rgb(202, 207, 219);
-  border: none;
-  border-radius: 0.3rem;
-  font-weight: 600;
-}
-
-.sociales {
-  display: flex;
-  align-items: center;
-  padding-top: 1rem;
-}
-
-.sociales .message {
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
-  font-size: 0.8rem;
-  line-height: 1.2rem;
-  color: rgba(156, 163, 175);
-}
-
-.sociales {
-  display: flex;
-  justify-content: center;
-}
-
-.sociales-iconos{
-  padding-left: 4.7rem;
-  padding-bottom: 1rem;
-}
-
-.registro {
-  text-align: center;
-  font-size: 0.7rem;
-  line-height: 1rem;
-  color: rgba(156, 163, 175);
+:root{
+    --rich-black: #001514ff;
+    --licorice: #1b1110ff;
+    --black-bean: #290f0eff;
+    --black-bean-2: #360d0cff;
+    --black-bean-3: #440b0aff;
+    --black-bean-4: #4b0a09ff;
+    --rosewood: #510908ff;
+    --rosewood-2: #5e0706ff;
+    --blood-red: #650605ff;
+    --blood-red-2: #6b0504ff;
 }
